# TorchWatch

./: .gitignore  README.md  ptwatch_project_brief.md  pyproject.toml
docs/: demo.tape  demo_train.py
ptwatch/: cli.py
tests/: test_alert_log.py  test_alert_wiring.py  test_alerts.py  test_app.py  test_cli.py  test_demo.py  test_eta.py  test_gpu_panel.py  test_nvidia.py  test_proc.py  test_sparkline.py  test_stdout_parser.py  test_stream.py  test_tail.py  test_wrapper.py
tests/fixtures/: README.md
torchwatch/: __init__.py  alerts.py  app.py  cli.py  eta.py
torchwatch/collector/: __init__.py  demo.py  nvidia.py  proc.py  stdout.py  stream.py  tail.py  wrapper.py
torchwatch/widgets/: __init__.py  alert_panel.py  eta_bar.py  gpu_panel.py  sparkline.py
