[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name; the import package and CLI are still `torchwatch`.
# (pypi.org/project/torchwatch is an abandoned 0.0.0 placeholder.)
name = "torchwatch-tui"
# Version is single-sourced from torchwatch/__init__.py.
dynamic = ["version"]
description = "A btop for your PyTorch GPU jobs: live terminal dashboard for training runs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jay Patel", email = "jayashish.patel@mail.utoronto.ca" },
]
keywords = ["pytorch", "gpu", "monitoring", "tui", "terminal", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual",
    "nvidia-ml-py",
    "psutil",
    "click",
]

[project.urls]
Homepage = "https://github.com/JayPatel095/TorchWatch"
Repository = "https://github.com/JayPatel095/TorchWatch"
Issues = "https://github.com/JayPatel095/TorchWatch/issues"

[project.scripts]
torchwatch = "torchwatch.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "types-psutil",
]

[tool.hatch.version]
path = "torchwatch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["torchwatch"]

[tool.hatch.build.targets.sdist]
# Ship the code and tests, not the demo assets or planning docs.
exclude = ["docs/", "torchwatch_project_brief.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

# pynvml ships no type information; mypy cannot check calls into it.
[[tool.mypy.overrides]]
module = "pynvml"
ignore_missing_imports = true
